      
      \item \code{object.size()} gains a \code{format()} method.
      
      \item There is a new family, \code{"ArialMT"} for the \code{pdf()}
      and \code{postscriipt()} devices.  This will only be rendered
      correctly on viewers which have access to Monotype TrueType fonts
      (but are sometimes requested by journals).
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The included version of LAPACK has been updated to 3.4.2.

      \item There is some support for parallel testing of an
      installation, by setting \env{TEST_MC_CORES} is set to an integer
      greater than one to indicate the maximum number of cores to be
      used in parallel. (It is worth specifying at least 8 cores if
      available.)  Most of these require a \command{make} program (such
      as GNU \command{make} and \command{dmake}) which supports the
      \command{${MAKE} -j nproc} syntax.

      Except on Windows: the tests of standard package examples in
      \command{make check} are done in parallel.  This also applies to
      running \code{tools::testInstalledPackages()}.

      The more time-consuming regression tests are done in parallel.

      The package checks in \command{make check-devel} and \command{make
	check-recommended} are done in parallel.

      \item More of \command{make check} will work if recommended packages
      are not installed: but recommended packages remain needed for
      thorough checking of an \R build.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item In the \file{DESCRIPTION} file, \preformatted{    License: X11}
      is no longer recognized as valid.  Use \sQuote{MIT + file LICENSE} or
      \sQuote{BSD_2_clause + file LICENSE} instead.

      \item For consistency, entries in \file{.Rinstignore} are now matched
      case-insensitively on all platforms.
    }
  }

  \subsection{DEBUGGING}{
    \itemize{